examples/test/testpolicy7697.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7697
  namespace: namespace150
spec:
  podSelector:
    matchLabels:
      key17: value48
      key42: value30
      key7: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value2
      podSelector:
        matchLabels:
          key45: value41
          key13: value12
          key7: value35
